add GitLab token variable into .env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 FLASK_APP="application/app.py"
 FLASK_DEBUG=1
-GH_TOKEN=<your_github_token>
+GITHUB_TOKEN=<your_github_token>
+GITlAB_TOKEN=<your_gitlab_token>
 BE_API="http://localhost:8080"
