--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 FLASK_APP="application/app.py"
 FLASK_RUN_PORT=5000
 FLASK_DEBUG=1
+
 GITHUB_TOKEN=<your_github_token>
 GITlAB_TOKEN=<your_gitlab_token>
-BE_API="http://localhost:8080"
+BACKEND_API="http://localhost:8080"
